# hiraishin

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
src/: main.rs
